pkgs/tree-sitter-selfie-snapshot/grammar.js
module.exports = grammar({
  name: "selfie_snapshot",

  rules: {
    document: ($) => repeat($.block),

    block: ($) => seq($.header, optional($.content)),

    header: ($) =>
      seq("╔═", field("filename", choice($.end_marker, $.filename)), "═╗"),

    filename: ($) => /[^═╗\n]*[^\s═╗\n]/,

    end_marker: ($) => "[end of file]",

    content: ($) => /[^╔]+/,
  },
});
